force-app/main/default/objects/VisualAntidote__Form_Style__c/VisualAntidote__Form_Style__c.object-meta.xml
<CustomObject>
    <description>Settings for Form style</description>
    <label>Form Style</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>