force-app/main/default/objects/VisualAntidote__Form_Style__c/fields/VisualAntidote__CSS_default__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__CSS_default__c</fullName>
    <label>CSS default</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>