force-app/main/default/objects/VisualAntidote__Form_Style__c/fields/VisualAntidote__Recently_selected__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Recently_selected__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Theme was selected recently on</description>
    <label>Recently selected</label>
    <type>DateTime</type>
</CustomField>