force-app/main/default/objects/VisualAntidote__Form_Style__c/fields/VisualAntidote__Style_data__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Style_data__c</fullName>
    <label>Style data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>