force-app/main/default/objects/VisualAntidote__Form_Style__c/fields/VisualAntidote__Style_Type__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Style_Type__c</fullName>
    <label>Style Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>