force-app/main/default/objects/VisualAntidote__Form_Style__c/fields/VisualAntidote__Tile_Preview_html__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Tile_Preview_html__c</fullName>
    <description>HTML for Tile Preview</description>
    <label>Tile Preview html</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>